fix: adding z-index to header (navbar)

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -19,6 +19,7 @@ header {
         display: flex;
         align-items: center;
         box-shadow: 0 0 5px 0 black;
+        z-index: 9999;
     }
 header * {
         display: inline;
